# protoschema

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile
.github/workflows/: release.yaml
prelude/: Cargo.toml
prelude/src/: field.rs  file.rs  lib.rs  macros.rs  message.rs  oneof.rs  optional.rs  proto_enum.rs  proto_type.rs  tag_allocator.rs
prelude/src/items/: options.rs
prelude/src/validators/: any.rs  bool.rs  bytes.rs  cel.rs  common_strings.rs  duration.rs  enums.rs  map.rs  message.rs  mod.rs  numeric.rs  oneof.rs  repeated.rs  string.rs  timestamp.rs
proc-macro/: Cargo.toml
proc-macro/src/: enum_derive.rs  lib.rs  macros.rs  message_derive.rs  oneof_derive.rs  type_extraction.rs
proc-macro/src/attributes/: enum_attributes.rs  enum_variant_attributes.rs  field_attributes.rs  message_attributes.rs  mod.rs  module_attributes.rs  nested_items.rs  oneof_attributes.rs  parsers.rs  reserved_names.rs  reserved_numbers.rs
proc-macro/src/attributes/container_attributes/: mod.rs  reserved_names.rs  reserved_numbers.rs
proc-macro/src/attributes/field_attributes/: mod.rs  type_extraction.rs
proc_macro/: Cargo.toml
protoschema/: Cargo.toml  README.md  askama.toml
protoschema/proto/myapp/v1/: user.proto
protoschema/src/: arena_version.rs  common.rs  common_resources.rs  enums.rs  errors.rs  extensions.rs  field_type.rs  fields.rs  files.rs  lib.rs  macros.rs  message.rs  messages.rs  oneofs.rs  option.rs  options.rs  package.rs  packages.rs  rendering.rs  schema.rs  services.rs
protoschema/src/macros/: enums_macros.rs  extensions_macros.rs  fields_macros.rs  maps_macros.rs  mod.rs  oneofs_macros.rs  options_macros.rs  parse_reserved.rs  services_macros.rs
protoschema/src/validators/: any.rs  booleans.rs  bytes.rs  cel.rs  duration.rs  enums.rs  map.rs  message.rs  mod.rs  numeric.rs  repeated.rs  string.rs  strings.rs  timestamp.rs
protoschema/templates/: enum.proto.j2  file.proto.j2  message.proto.j2  opt.proto.j2  option_value.proto.j2  service.proto.j2  template.proto.j2
protoschema/tests/: test.rs
testing/: Cargo.toml
testing/src/: main.rs
tests/: Cargo.toml  build.rs
tests/proto/myapp/v1/: user.proto
tests/src/: main.rs
