[workspace]
members = ["protoschema"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Rick-Phoenix <https://github.com/Rick-Phoenix>"]
repository = "https://github.com/Rick-Phoenix/protoschema"
keywords = ["protobuf", "validation", "schema"]

[workspace.dependencies]
paste = "1"
askama = { version = "0.14.0", default-features = false, features = [
  "config",
  "derive",
  "std",
] }
bon = "3.7.0"
maplit = "1.0.2"
regex = "1.11.1"
proto-types = { version = "0.1" }
thiserror = "2.0.16"
prost-reflect = "0.16.1"
