[workspace]
members = ["tests", "protoschema"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Rick-Phoenix <https://github.com/Rick-Phoenix>"]
repository = "https://github.com/Rick-Phoenix/protoschema"
keywords = ["protobuf", "validation", "schema"]

[workspace.dependencies]
paste = "1"
askama = { version = "0.14.0", default-features = false, features = [
  "config",
  "derive",
  "std",
] }
bon = "3.7.0"
maplit = "1.0.2"
regex = "1.11.1"
thiserror = "2.0.16"
prost-reflect = "0.16.1"
convert_case = "0.8.0"
proto-types = { version = "0.1.4", features = ["protovalidate"] }
protocheck = { version = "0.1.*", features = ["cel"] }
protocheck-build = { version = "0.1.*", features = ["cel"] }
prost-build = "0.14.1"
