[package]
name = "protoschema-proc-macro"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
