[package]
name = "protoschema"
version = "0.1.4"
description = "📐 Programmatically define protobuf contracts using flexible, modular and reusable elements"
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
edition.workspace = true

readme = "README.md"

[dependencies]
askama = { workspace = true }
bon = { workspace = true }
paste = { workspace = true }
regex = { workspace = true }
proto-types = { workspace = true }
thiserror = { workspace = true }
convert_case = { workspace = true }
document-features = "=0.2.11"

[features]
## Enables macros for generating fields with types coming from the `google.type` package.
common_types = []
## Enables macros for generating fields with types coming from the `google.rpc` package.
rpc_types = []

# [dev-dependencies]
# protocheck-build = { workspace = true }
# proto-types = { workspace = true }
# prost-build = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
