[package]
name = "protoschema"
version = "0.1.8"
description = "📐 Programmatically define protobuf contracts using flexible, modular and reusable elements"
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
edition.workspace = true

readme = "README.md"

[package.metadata.release]
tag-name = "v{{version}}"
allow-branch = ["main"]
enable-all-features = true


[dependencies]
askama = { workspace = true }
bon = { workspace = true }
paste = { workspace = true }
regex = { workspace = true }
proto-types = { workspace = true }
thiserror = { workspace = true }
convert_case = { workspace = true }
document-features = "0.2"

[features]
## Enables macros for generating fields with types coming from the `google.type` package.
common_types = []
## Enables macros for generating fields with types coming from the `google.rpc` package.
rpc_types = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
