[package]
name = "tests"
version = "0.1.0"
publish = false
edition.workspace = true

[dependencies]
prost = "0.14.1"
protocheck = { path = "../../protocheck/protocheck" }

[build-dependencies]
prost-build = "0.14.1"
proto-types = { workspace = true }
protocheck-build = { workspace = true, features = ["cel"] }
protoschema = { path = "../protoschema/" }
