[package]
name = "tests"
publish = false
edition.workspace = true

[dependencies]
prost = "0.14.1"
protocheck = { path = "../../protocheck/protocheck" }

[build-dependencies]
proto-types = { workspace = true }
protoschema = { path = "../protoschema/" }
protocheck = { path = "../../protocheck/protocheck", features = ["cel"] }
protocheck-build = { path = "../../protocheck/protocheck-build", features = [
  "cel",
] }
prost-build = "0.14.1"
